# dioxus-icons

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  PUBLISHING_TODO.md  README.md  RSX_BUILD_TIMING.md
.github/workflows/: ci.yml  lucide-updates.yml  nightly.yml
ci/: validate_docsrs.sh  verify_codegen.sh
crates/dioxus-icons/: Cargo.toml  README_FRAGMENT.md  STATIC_PICKER.html  build.rs  rustdoc-header.html
crates/dioxus-icons-codegen/: Cargo.toml
crates/dioxus-icons-codegen/data/: lucide-related-siglip2-base-patch16-224.json
crates/dioxus-icons-codegen/fixtures/lucide-mini/icons/: 1-circle.json  box.json  trash-2.json
crates/dioxus-icons-codegen/scripts/: generate_related_icons.py  requirements.txt
crates/dioxus-icons-codegen/src/: emit_component.rs  emit_docs.rs  emit_manifest.rs  fetch.rs  inputs.rs  main.rs  naming.rs  parse.rs  related.rs
crates/dioxus-icons/examples/: basic.rs  navbar.rs  stateful_button.rs  tailwind.rs
crates/dioxus-icons/examples/basic/: README.md
crates/dioxus-icons/examples/navbar/: README.md
crates/dioxus-icons/examples/stateful_button/: README.md
crates/dioxus-icons/examples/tailwind/: README.md
crates/dioxus-icons/picker/: picker.html  picker.ts
crates/dioxus-icons/src/: lib.rs  props.rs  vdom.rs
crates/dioxus-icons/src/js/: hash.txt  picker.js
crates/dioxus-icons/tests/: api.rs  manifest.rs
docs/: sanitizer-notes.md
tests/playwright/: package-lock.json  package.json  playwright.config.ts  validate-docs-output.mjs
tests/playwright/tests/: picker.spec.ts
