[workspace]
members = [
    "crates/dioxus-icons",
    "crates/dioxus-icons-codegen",
]
resolver = "3"

[workspace.package]
edition = "2024"
homepage = "https://github.com/dioxuslabs/dioxus-icons"
keywords = ["dioxus", "lucide", "icons", "svg", "components"]
categories = ["gui", "web-programming", "wasm"]
license = "MIT"
repository = "https://github.com/dioxuslabs/dioxus-icons"
rust-version = "1.85.0"
version = "0.1.0"

[workspace.dependencies]
anyhow = "1.0.100"
base64 = "0.22.1"
dioxus = { git = "https://github.com/ealmloff/dioxus", branch = "selection", default-features = false, features = ["html", "macro"] }
# Required by Dioxus props and RSX expansion.
dioxus-signals = { git = "https://github.com/ealmloff/dioxus", branch = "selection" }
lazy-js-bundle = { git = "https://github.com/ealmloff/dioxus", branch = "selection" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sha2 = "0.10.9"
ureq = "3.1.2"
zip = { version = "5.1.1", default-features = false, features = ["deflate"] }
