[workspace]
members = [
    "crates/dioxus-icons",
    "crates/dioxus-icons-codegen",
]
resolver = "3"

[workspace.package]
edition = "2024"
homepage = "https://github.com/dioxuslabs/dioxus-icons"
keywords = ["dioxus", "lucide", "icons", "svg", "components"]
categories = ["gui", "web-programming", "wasm"]
license = "MIT"
repository = "https://github.com/dioxuslabs/dioxus-icons"
rust-version = "1.85.0"
version = "0.1.0"

[workspace.dependencies]
anyhow = "1.0.100"
base64 = "0.22.1"
# Public `dioxus-icons` support starts at Dioxus 0.7.7 and follows the
# compatible 0.7.x line. Keep renderer feature selection in app crates.
dioxus = { git = "https://github.com/DioxusLabs/dioxus", rev = "f717a8e184a522d078b70bb4b4d62a5f9a99ddfc", default-features = false, features = ["html", "macro"] }
# Required by Dioxus props and RSX expansion.
dioxus-signals = { git = "https://github.com/DioxusLabs/dioxus", rev = "f717a8e184a522d078b70bb4b4d62a5f9a99ddfc" }
lazy-js-bundle = "0.7.7"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sha2 = "0.10.9"
ureq = "3.1.2"
zip = { version = "5.1.1", default-features = false, features = ["deflate"] }
