[package]
name = "dioxus-icons"
description = "Lucide icons for Dioxus, one component per icon."
categories.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
readme = "../../README.md"
repository.workspace = true
version.workspace = true

[lib]
name = "dioxus_icons"

[package.metadata.docs.rs]
rustdoc-args = ["--cfg", "docsrs"]

[features]
# No optional public features for the first publish. The library always exposes
# the generated Lucide component surface and leaves renderer selection to apps.
default = []

[dependencies]
# The published crate intentionally uses only Dioxus' RSX and HTML/SVG surface.
dioxus.workspace = true
# Required by generated Dioxus props and RSX expansion in icon components.
dioxus-signals.workspace = true

[build-dependencies]
lazy-js-bundle.workspace = true

[dev-dependencies]
dioxus = { workspace = true, features = ["launch", "lib", "server"] }
serde_json.workspace = true
