[package]
name = "dioxus-icons"
description = "Lucide icons for Dioxus, one component per icon."
categories.workspace = true
documentation = "https://docs.rs/dioxus-icons"
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license = "MIT AND ISC"
readme = "../../README.md"
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[lib]
name = "dioxus_icons"

[package.metadata.docs.rs]
rustdoc-args = ["--cfg", "docsrs"]

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ["cfg(rust_analyzer)"] }

[features]
# The generated Lucide component surface is always available. App crates choose
# renderer features.
default = []

[dependencies]
# The published crate intentionally uses only Dioxus core and HTML/SVG surface.
dioxus.workspace = true
# Required by Dioxus props.
dioxus-signals.workspace = true

[build-dependencies]
lazy-js-bundle.workspace = true

[dev-dependencies]
dioxus = { workspace = true, features = ["launch", "lib", "server"] }
serde_json.workspace = true
